可以操作mysql、redis，添加了几个小程序接口，修改了小程序页面逻辑

--- a/client/miniprogram/app.json
+++ b/client/miniprogram/app.json
@@ -1,11 +1,12 @@
 {
   "pages":[
-    "pages/index/index"
+    "pages/index/index",
+    "pages/room/room"
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
+    "navigationBarBackgroundColor": "#27ae60",
     "navigationBarTitleText": "弹幕机",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle":"white"
   }
 }
