--- a/server/package.json
+++ b/server/package.json
@@ -10,15 +10,18 @@
   "license": "ISC",
   "dependencies": {
     "glob": "^7.1.3",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-compose": "^4.1.0",
     "koa-router": "^7.4.0",
     "koa-websocket": "^5.0.1",
     "mysql": "^2.16.0",
+    "mysql2": "^1.6.5",
     "redis": "^2.8.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "sequelize": "^5.2.0",
     "ws": "^6.2.0"
   }
 }
