--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "koa-compose": "^4.1.0",
     "koa-router": "^7.4.0",
     "koa-websocket": "^5.0.1",
+    "koa2-cors": "^2.0.6",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
     "redis": "^2.8.0",
