--- a/client/web/package.json
+++ b/client/web/package.json
@@ -27,5 +27,8 @@
     "vuex": "^3.1.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
+  },
+  "dependencies": {
+    "qrcode": "^1.3.3"
   }
 }
