--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "captchapng": "0.0.1",
     "glob": "^7.1.3",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
